# Work-Automation-Python

./: .gitignore  README.md  공기연장_보고서_목차별_자동화_검수.md  공기연장_보고서_자동화_검수_표.md  업무자동화_솔루션_발표_v10.pptx
36_contract_meta/: .gitignore  README.md  pyproject.toml
36_contract_meta/schemas/: contract_meta.schema.json
36_contract_meta/src/contract_meta/: __init__.py  attach_scan.py  attachments.py  audit.py  bridge.py  bridges.py  cli.py  findings.py  models.py  report.py
36_contract_meta/src/contract_meta/body/: renderer.py  to_docx.py  to_docx_kicm.py
36_contract_meta/src/contract_meta/body/chapter_1/: chapter_1.md.j2
36_contract_meta/src/contract_meta/body/chapter_2/: chapter_2.md.j2
36_contract_meta/src/contract_meta/body/chapter_3_2/: chapter_3_2.md.j2
36_contract_meta/src/contract_meta/body/chapter_4_2/: chapter_4_2.md.j2
36_contract_meta/src/contract_meta/body/chapter_4_5/: chapter_4_5.md.j2
36_contract_meta/src/contract_meta/extractors/: contract_text_pdf.py  estimate_sheet.py  excerpts.py  pdf_text.py  report_rates.py
36_contract_meta/src/contract_meta/templates/: contract_meta.template.yaml
36_contract_meta/src/contract_meta/validators/: consistency.py
36_contract_meta/tests/: test_attach_scan.py  test_renderer_filters.py
37_cost_aggregation/: .gitignore  README.md  pyproject.toml
37_cost_aggregation/src/cost_aggregation/: __init__.py  audit.py  builder.py  calc.py  cli.py  models.py  report.py
37_cost_aggregation/src/cost_aggregation/extractors/: expense_classifier.py  payroll_consolidated_ocr.py  payroll_payslip_pdf.py  personnel.py  report_personnel_table.py  salary_individual_pdf.py  salary_xlsx.py
37_cost_aggregation/tests/: test_calc_salary.py  test_expense_classifier.py
38_crash_aggregation/: .gitignore  README.md  pyproject.toml
38_crash_aggregation/src/crash_aggregation/: audit.py  bridges.py  builder.py  cli.py  models.py  report.py
38_crash_aggregation/src/crash_aggregation/builders/: monthly_matrix.py
38_crash_aggregation/src/crash_aggregation/extractors/: crew_xlsx.py
(+161 files in other folders)
