[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contract-meta"
version = "0.1.0"
description = "공기연장 보고서용 계약 메타데이터 추출 파이프라인 (계약서·변경계약서·산출내역서 → JSON)"
requires-python = ">=3.10"
authors = [{ name = "CT Group" }]
dependencies = [
    "pdfplumber>=0.11.0",
    "PyMuPDF>=1.24.0",
    "openpyxl>=3.1.0",
    "pydantic>=2.0.0",
    "typer>=0.12.0",
    "PyYAML>=6.0",
    "Jinja2>=3.1.0",
    "python-docx>=1.1.0",
]

[tool.setuptools.package-data]
contract_meta = ["templates/*.yaml", "body/*.md.j2", "body/**/*.md.j2"]

[project.scripts]
contract-meta = "contract_meta.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
